--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/cli": "~15.1.2",
     "@angular/compiler-cli": "^15.1.1",
     "@types/jasmine": "~4.0.0",
+    "cypress": "^12.3.0",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
