Update project & deployment configuration

--- a/.github/workflows/deploy-live.yml
+++ b/.github/workflows/deploy-live.yml
@@ -1,16 +1,28 @@
-name: Deploy to Firebase Hosting on merge
+name: Deploy to Production
 on:
   push:
     branches:
       - main
 jobs:
-  build_and_deploy:
+  deploy_staging_live:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: npm ci && npm run build
+      - run: npm ci && npm run build-staging
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_THEJUBE_STAGING }}'
           channelId: live
+
+### THIS JOB WILL BE ADDED LATER WHEN THE PRODUCTION FIREBASE PROJECT IS ACTUALLY CREATED
+  # deploy_production_live:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - run: npm ci && npm run build-production
+  #     - uses: FirebaseExtended/action-hosting-deploy@v0
+  #       with:
+  #         repoToken: '${{ secrets.GITHUB_TOKEN }}'
+  #         firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_THEJUBE_PRODUCTION }}'
+  #         channelId: live
