--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -1,14 +1,15 @@
-name: Deploy to Firebase Hosting on PR
-on: pull_request
-  branches-ignore:
-    - 'main'
+name: Deploy to Staging
+on: 
+  pull_request:
+    branches:
+      - main
 jobs:
-  build_and_preview:
+  deploy_staging_preview:
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: npm ci && npm run build
+      - run: npm ci && npm run build-staging
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
