--- a/package.json
+++ b/package.json
@@ -1,46 +1,38 @@
 {
-  "name": "thejube",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^15.1.1",
-    "@angular/common": "^15.1.1",
-    "@angular/compiler": "^15.1.1",
-    "@angular/core": "^15.1.1",
-    "@angular/fire": "^7.5.0",
-    "@angular/forms": "^15.1.1",
-    "@angular/localize": "^15.1.1",
-    "@angular/platform-browser": "^15.1.1",
-    "@angular/platform-browser-dynamic": "^15.1.1",
-    "@angular/router": "^15.1.1",
-    "@fortawesome/fontawesome-free": "^6.2.1",
-    "@ng-bootstrap/ng-bootstrap": "^14.0.0",
-    "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.3",
-    "ngx-toastr": "^15.2.2",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^15.1.2",
-    "@angular/cli": "~15.1.2",
-    "@angular/compiler-cli": "^15.1.1",
-    "@types/jasmine": "~4.0.0",
-    "cypress": "^12.3.0",
-    "jasmine-core": "~4.2.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.8.0"
-  }
+    "name": "thejube",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build-staging": "ng build",
+        "build-production": "ng build --configuration production"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^15.1.1",
+        "@angular/common": "^15.1.1",
+        "@angular/compiler": "^15.1.1",
+        "@angular/core": "^15.1.1",
+        "@angular/fire": "^7.5.0",
+        "@angular/forms": "^15.1.1",
+        "@angular/localize": "^15.1.1",
+        "@angular/platform-browser": "^15.1.1",
+        "@angular/platform-browser-dynamic": "^15.1.1",
+        "@angular/router": "^15.1.1",
+        "@fortawesome/fontawesome-free": "^6.2.1",
+        "@ng-bootstrap/ng-bootstrap": "^14.0.0",
+        "@popperjs/core": "^2.11.6",
+        "bootstrap": "^5.2.3",
+        "ngx-toastr": "^15.2.2",
+        "rxjs": "~7.5.0",
+        "tslib": "^2.3.0",
+        "zone.js": "~0.11.4"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "^15.1.2",
+        "@angular/cli": "~15.1.2",
+        "@angular/compiler-cli": "^15.1.1",
+        "cypress": "^12.3.0",
+        "typescript": "~4.8.0"
+    }
 }
